--- a/css/style.scss
+++ b/css/style.scss
@@ -4882,6 +4882,7 @@ p.original_price {
 			height: 85px;
 			@include display_varible($justify-content: flex-start);
 			border-bottom: 1px solid #eeeeee;
+			cursor: pointer;
 
 			&:first-child {
 				border-top: 1.5px solid #eeeeee;
@@ -4911,7 +4912,60 @@ p.original_price {
 		}
 	}
 
+
+
 }	
+
+.notice_regist_wrap {
+	background-color: #ffffff;
+	box-sizing: border-box;
+	padding-bottom: 40px;
+
+	> div:first-child {
+		margin-top: 30px;
+	}
+
+	.request_list {
+		padding-bottom: 12px;
+	}
+
+
+	.current_position {
+		position: relative;
+		height: 47px;
+		border: 1px solid #eeeeee;
+		border-radius: 5px;
+		box-sizing: border-box;
+		padding-right: 95px;
+		padding-left: 13px;
+		@include display_varible($justify-content: flex-start);
+		p {
+			color: $color_03;
+			font-size: 13px;
+
+			i {
+				padding-right: 5px;
+			}
+		}
+
+		button {
+			@include position_var($left: auto);
+			right: 13px;
+			height: 30px;
+			padding: 0 8px;
+			background-color: #FE354D;
+			border-radius: 5px;
+			color: #ffffff;
+			@include display_varible;
+
+			img {
+				margin-right: 5px;
+			}
+		}
+	}
+
+
+}
 
 
 
