--- a/css/style.css
+++ b/css/style.css
@@ -2493,6 +2493,12 @@ p.original_price {
 .radio_btn_wrap input {
   display: none;
 }
+.radio_btn_wrap input:checked + label > div {
+  border-color: #EB0D2F;
+}
+.radio_btn_wrap input:checked + label > div > span {
+  background-color: #EB0D2F;
+}
 .radio_btn_wrap input + label {
   display: block;
   width: 100%;
@@ -2507,7 +2513,7 @@ p.original_price {
   height: 18px;
   border-radius: 18px;
   box-sizing: border-box;
-  border: 1px solid #EB0D2F;
+  border: 1px solid #cccccc;
   position: absolute;
   top: 0;
   left: 0;
@@ -2517,7 +2523,7 @@ p.original_price {
   height: 8px;
   border-radius: 8px;
   display: inline-block;
-  background-color: #EB0D2F;
+  background-color: #cccccc;
 }
 .radio_btn_wrap input + label p {
   overflow-wrap: break-word;
@@ -3257,6 +3263,9 @@ p.original_price {
 .position_search .top .current_position img {
   margin-right: 5px;
 }
+.position_search .top .current_position p {
+  margin-bottom: 0;
+}
 .position_search .top .current_position span {
   font-size: 12px;
 }
@@ -3586,7 +3595,7 @@ p.original_price {
 }
 .channel_setting select {
   position: relative;
-  height: 42px;
+  height: 47px;
   background: url(/img/bottom_arrow.svg) no-repeat top 16px right 12px;
 }
 
@@ -3657,6 +3666,83 @@ p.original_price {
 }
 .input_list_wrap > .gender_choice .tit {
   margin-bottom: 0;
+}
+
+.product_regist_wrap {
+  background-color: #ffffff;
+}
+.product_regist_wrap .list_wrap .list {
+  margin-bottom: 20px;
+}
+.product_regist_wrap .list_wrap .list > p {
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+.product_regist_wrap .list_wrap .list .tip {
+  margin-top: 5px;
+  font-size: 10px;
+  color: #EB0D2F;
+}
+.product_regist_wrap .list_wrap .list > .request_list {
+  padding-bottom: 10px;
+}
+.product_regist_wrap .list_wrap .list .choice_wrap {
+  display: flex;
+  align-items: center;
+}
+.product_regist_wrap .list_wrap .list .choice_wrap .radio_btn_wrap {
+  margin-right: 30px;
+}
+.product_regist_wrap .list_wrap select {
+  position: relative;
+  background: url(../img/bottom_arrow.svg) no-repeat top 16px right 12px;
+}
+
+.product_regist_step {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 22px 0 32px 0;
+}
+.product_regist_step ul {
+  position: relative;
+  width: 135px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.product_regist_step ul::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #E1E1E1;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+.product_regist_step ul li {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border: 1px solid #E1E1E1;
+  color: #cccccc;
+  box-sizing: border-box;
+  border-radius: 24px;
+  padding: 0;
+  font-size: 13px;
+  line-height: 1.4em;
+  z-index: 2;
+}
+.product_regist_step p {
+  margin-top: 25px;
+  font-size: 18px;
 }
 
 /*# sourceMappingURL=style.css.map */
