--- a/css/style.scss
+++ b/css/style.scss
@@ -3250,6 +3250,37 @@ p.original_price {
 			}
 		}
 
+		&.cellphone_verification {
+			margin-top: 35px;
+			.number_verification {
+				position: relative;
+				padding-right: 100px;
+				margin-bottom: 8px;
+
+				button {
+					@include position_var($left: auto);
+					right: 0;
+					height: 42px;
+					padding: 0 24px;
+					border: 1px solid $color_02;
+					border-radius: 5px;
+					color: $color_05;
+				}
+			}
+
+			.number_verification_input {
+				position: relative;
+				input {
+					padding: 0.2rem 4em 0.2rem 1rem;
+				}
+				.count {
+					@include position_var($left: auto);
+					right: 14px;
+					color: $maincolor;
+				}
+			}
+		}
+
 
 	}
 
@@ -3257,6 +3288,11 @@ p.original_price {
 		margin-bottom: 50px;
 	}
 }
+
+.btn.disabled {
+	background-color: $color_02;
+}
+
 
 /* 회원가입페이지 4단계 css*/
 .join_step4 {
@@ -3535,7 +3571,7 @@ p.original_price {
 				}
 			}
 
-			/* 채널문의하기 css */
+			/* 한줄소통 */
 			.tab_cnt_04 {
 				padding-top: 32px;
 				padding-bottom: 32px;
@@ -3547,7 +3583,7 @@ p.original_price {
 					span {
 						font-size: 13px;
 						color: $color_03;
-
+			
 						&.count{
 							color: #EB0D2F;
 						}
@@ -3565,71 +3601,151 @@ p.original_price {
 				}
 
 				.list_wrap {
+
+					border-top: 1px solid $color_01;
+
 					.list {
-						border: 1px solid #eeeeee;
-						border-radius: 5px;
-						overflow: hidden;
-						margin-bottom: 10px;
-
-						.user_info {
-							> span {
-								&.id {
-									color: $color_03;
-									font-size: 11px;
-									font-weight: 600;
-								}
-								&.date {
-									color: $color_03;
-									font-size: 10px;
-									font-weight: 400;
-								}
-
+						position: relative;
+						border-bottom: 1px solid $color_01;
+						padding: 20px 0;
+					
+						.img {
+							@include position_var($top: auto, $transform: none, $left: 0px);
+							width: 36px; height: 36px;
+							overflow: hidden;
+							border-radius: 36px;
+							border: 1px solid $color_01;
+							@include display_varible;
+					
+							img {
+								max-height: 100%;
 							}
 						}
-
-						.content {
-							position: relative;
-							padding-left: 15px;
-							margin: 5px 0;
-							> p{
-								position: absolute;
-								top: 0; left: 0;
-								font-size: 14px;
-								font-weight: 700;
+					
+					
+						.cnt {
+							padding-left: 46px;
+							font-size: 11px;
+					
+							strong {
+								display: block;
+								line-height: 1.6em;
+								margin-bottom: 5px;
 							}
-							> div {
-								font-size: 14px;
+							span {
+								display: block;
+								color: $color_03;
+								margin-bottom: 6px;
 							}
-						}
-
-						.question {
-							width: 100%;
-							height: 90px;
-							box-sizing: border-box;
-							padding: 15px 12px;
-
-
-							.comment_btn {
-								font-size: 10px;
-								color: #EB0D2F;
+					
+							p {
+								margin-bottom: 6px;
 							}
+							
 						}
-
-						.answer {
-							box-sizing: border-box;
-							padding: 15px 12px;
-							background-color: $color_01;	
-						}
-					}	
+					}
+					
 				}
-
 			}
-
 
 		}
 	}
 
 }
+
+
+
+
+/* 채널문의하기 css */
+.question_wrap {
+	padding-top: 32px;
+	padding-bottom: 32px;
+	background-color: #ffffff;
+
+	.title {
+		font-size: 15px;
+		margin-bottom: 10px;
+		span {
+			font-size: 13px;
+			color: $color_03;
+
+			&.count{
+				color: #EB0D2F;
+			}
+		}
+	}
+
+	.button {
+		width: 100%;
+		height: 40px;
+		background-color: #ffffff;
+		border: 1px solid #FE354D;
+		border-radius: 5px;
+		color: #FE354D;
+		margin-bottom: 35px;
+	}
+
+	.list_wrap {
+		.list {
+			border: 1px solid #eeeeee;
+			border-radius: 5px;
+			overflow: hidden;
+			margin-bottom: 10px;
+
+			.user_info {
+				> span {
+					&.id {
+						color: $color_03;
+						font-size: 11px;
+						font-weight: 600;
+					}
+					&.date {
+						color: $color_03;
+						font-size: 10px;
+						font-weight: 400;
+					}
+
+				}
+			}
+
+			.content {
+				position: relative;
+				padding-left: 15px;
+				margin: 5px 0;
+				> p{
+					position: absolute;
+					top: 0; left: 0;
+					font-size: 14px;
+					font-weight: 700;
+				}
+				> div {
+					font-size: 14px;
+				}
+			}
+
+			.question {
+				width: 100%;
+				height: 90px;
+				box-sizing: border-box;
+				padding: 15px 12px;
+
+
+				.comment_btn {
+					font-size: 10px;
+					color: #EB0D2F;
+				}
+			}
+
+			.answer {
+				box-sizing: border-box;
+				padding: 15px 12px;
+				background-color: $color_01;	
+			}
+		}	
+	}
+
+}
+
 
 
 /* 오른쪽 이동버튼 */
@@ -5197,6 +5313,38 @@ p.original_price {
 		border-bottom: 1px solid #eeeeee;
 	}	
 }
+
+.channel_create_wrap {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: #ffffff;
+	@include display_varible;
+	flex-direction: column;
+
+	.img {
+		@include circle_img($width: 68px, $height: 68px, $border-radius: 68px);
+		@include display_varible;
+		background-color: #f1f1f1;
+		margin-bottom: 15px;
+	}
+
+	p {
+		font-size: 14px;
+		color: $color_05;
+		margin-bottom: 25px;
+	}
+
+	.create_btn {
+		@include display_varible;
+		padding: 0 23px;
+		height: 35px;
+		border-radius: 5px;
+		background-color: #FE354D;
+		color: #ffffff;
+	}
+}
+
 
 
 
