--- a/css/style.css
+++ b/css/style.css
@@ -3353,7 +3353,7 @@ p.original_price {
   padding: 15px 12px;
   background-color: #F1F1F1;
 }
-.question_wrap .list_wrap .list .btn_wrap button {
+.question_wrap .list_wrap .list .answer .btn_wrap button {
   background-color: #ffffff;
 }
 
